testsuite/tests/v1/patterns/regex/invalid_regex/test.out
Error: Invalid regular expression syntax
   ╭─[ <working-dir>/script.lkql:2:12 ]
   │
 2 │ print(s is "(not a valid regex")
   │            ──────────┬─────────  
   │                      ╰─────────── Syntax error in the "(not a valid regex" regular expression
───╯
